--- a/Pages/disaster/profile/staffassignment/Add.cshtml
+++ b/Pages/disaster/profile/staffassignment/Add.cshtml
@@ -46,7 +46,7 @@
                                 </th>
                                 <th>Name</th>
                                 <th style="text-align: center;">Sex</th>
-                                <th>Birthdate</th>
+                                <th style="text-align: center;">Birthdate</th>
                                 <th>Assign a Role</th>
                             </tr>
                         </thead>
@@ -62,7 +62,7 @@
                                     </td>
                                     <td width="25%">@item.fullName</td>
                                     <td width="15%" style="text-align: center;">@item.sex</td>
-                                    <td width="25%">@item.birthdate</td>
+                                    <td width="25%" style="text-align: center;">@item.birthdate</td>
                                     <td>
                                         <select class="form-select role-select" name="role[]" required disabled>
                                             <option value="" selected disabled>Select a role</option>
@@ -169,7 +169,7 @@
 <!-- Making the table responsive -->
 <script>
     $(document).ready(function () {
-        $('#entrylog-table').DataTable({
+        var table = $('#entrylog-table').DataTable({
             responsive: true,
             columnDefs: [
                 { "orderable": true, "targets": [1, 3, 4] }, // Sortable columns
@@ -177,10 +177,27 @@
                 { "responsivePriority": -1, "targets": [0, 4] } // Disable responsive for checkbox and role select column
             ],
             // Set initial sorting
-            order: [[1, 'asc']],
-            language: {
-                emptyTable: "There are no available EC staff members to assign.",
-            }
+            order: [[1, 'asc']]
+        });
+
+        // Adding filters to specific columns
+        table.columns([2]).every(function () {
+            var column = this;
+            var select = $('<select><option value=""></option></select>')
+                .appendTo($(column.header()))
+                .on('change', function () {
+                    var val = $.fn.dataTable.util.escapeRegex(
+                        $(this).val()
+                    );
+
+                    column
+                        .search(val ? '^' + val + '$' : '', true, false)
+                        .draw();
+                });
+
+            column.data().unique().sort().each(function (d, j) {
+                select.append('<option value="' + d + '">' + d + '</option>');
+            });
         });
     });
 </script>
