--- a/Pages/disaster/profile/staffassignment/Index.cshtml
+++ b/Pages/disaster/profile/staffassignment/Index.cshtml
@@ -133,10 +133,9 @@
 										</div>
 									</th>
 									<th>Name</th>
-									<th>Role</th>
-									<th>Date Assigned</th>
-									<th>Date Completed</th>
-									<th style="text-align: center;">Status</th>
+									<th>Sex<br /></th>
+									<th>Role<br /></th>
+									<th style="text-align: center;">Status<br /></th>
 									<th></th>
 								</tr>
 							</thead>
@@ -144,18 +143,17 @@
 								@foreach (var item in Model.listAssignment)
 								{
 									<tr>
-										<td width="2%">
+										<td width="5%">
 											<div class="form-check">
 												<input class="form-check-input" type="checkbox" value="@item.assignmentID"
 													   name="selectedStaff[]" @((item.status == "Completed") ? "disabled" : "")>
 												<label class="form-check-label"></label>
 											</div>
 										</td>
-										<td width="30%">@item.fullName</td>
-										<td width="10%">@item.role</td>
-										<td width="27%">@item.assignmentDate</td>
-										<td width="26%">@item.completionDate</td>
-										<td width="5%" style="text-align: center;">
+										<td width="35%">@item.fullName</td>
+										<td width="15%" style="text-align: center;">@item.sex</td>
+										<td width="20%" style="text-align: center;">@item.role</td>
+										<td width="20%" style="text-align: center;">
 											@if (@item.status == "Assigned")
 											{
 												<span class="badge bg-success">@item.status</span>
@@ -165,13 +163,25 @@
 												<span class="badge rounded-pill bg-light">@item.status</span>
 											}
 										</td>
-										<td width="2%">
+										<td width="5%">
 											<div class="d-inline position-relative">
 												<a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
 													<i class="bi bi-three-dots-vertical"></i>
 												</a>
 												<ul class="dropdown-menu" aria-labelledby="recordOptions">
-													<li><a class="dropdown-item" href="/ecstaff/index">View Profile</a></li>
+													<li>
+														<a href="#" class="dropdown-item"
+														   onclick="showStaffInfo('@item.fullName', '@item.sex', '@item.age', '@item.birthdate', '@item.mobileNum', '@item.emailAddress')"
+														   data-bs-toggle="modal" data-bs-target="#profileModal">
+															View Profile
+														</a>
+													</li>
+													<li>
+														<a href="#" class="dropdown-item" onclick="showDatesPopup('@item.assignmentDate', '@item.completionDate')"
+														   data-bs-toggle="modal" data-bs-target="#datesModal">
+															View Assignment Details
+														</a>
+													</li>
 													<li>
 														<a href="#" class="dropdown-item text-danger" onclick="prepareDelete('@item.assignmentID')"
 														   data-deleteid="@item.assignmentID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
@@ -210,6 +220,90 @@
 		</div>
 	</div>
 </div>
+
+<!-- Modal: View Assignment Details -->
+<div class="modal fade" id="datesModal" tabindex="-1">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Assignment Details</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<p id="assignmentDate"></p>
+				<p id="completionDate"></p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- Assignment Details Modal -->
+<script>
+	function showDatesPopup(assignmentDate, completionDate) {
+		// Set the content of the modal with the provided dates
+		document.getElementById('assignmentDate').innerText = 'Assignment Date: ' + assignmentDate;
+		document.getElementById('completionDate').innerText = 'Completion Date: ' + completionDate;
+	}
+</script>
+
+<!-- Modal: View Profile -->
+<div class="modal fade" id="profileModal" tabindex="-1">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Staff Profile</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<table>
+					<tr>
+						<th class= "text-start pe-4">Name</th>
+						<td id="fullName" class= "text-start"></td>
+					</tr>
+					<tr>
+						<th class= "text-start pe-4">Sex</th>
+						<td id="sex" class= "text-start"></td>
+					</tr>
+					<tr>
+						<th class= "text-start pe-4">Age</th>
+						<td id="age" class= "text-start"></td>
+					</tr>
+					<tr>
+						<th class= "text-start pe-4">Birthdate</th>
+						<td id="birthdate" class= "text-start"></td>
+					</tr>
+					<tr>
+						<th class= "text-start pe-4">Mobile Number</th>
+						<td id="mobileNum" class= "text-start"></td>
+					</tr>
+					<tr>
+						<th class= "text-start pe-4">Email Address</th>
+						<td id="emailAddress" class= "text-start"></td>
+					</tr>
+				</table>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- Staff Profile Modal -->
+<script>
+	function showStaffInfo(fullName, sex, age, birthdate, mobileNum, emailAddress) {
+		// Set the content of the modal with the provided staff info
+		document.getElementById('fullName').innerText = fullName;
+		document.getElementById('sex').innerText = sex;
+		document.getElementById('age').innerText = age;
+		document.getElementById('birthdate').innerText = birthdate;
+		document.getElementById('mobileNum').innerText = mobileNum;
+		document.getElementById('emailAddress').innerText = emailAddress;
+	}
+</script>
 
 <!-- Modal: Confirm Delete -->
 <div class="modal" id="deleteConfirmationModal" tabindex="-1">
@@ -265,14 +359,13 @@
 			responsive: true,
 			select: true, // select for checkbox
 			columnDefs: [
-				{ "orderable": true, "targets": [1, 3, 4] }, // Sortable columns
-				{ "orderable": false, "targets": [0, 2, 5, 6] } // Non-sortable columns
-			],
-			order: [[3, 'desc'], [1, 'asc']] // Initial sorting by Assigned Date
+				{ "orderable": true, "targets": [1] }, // Sortable columns
+				{ "orderable": false, "targets": [0, 2, 3, 4, 5] } // Non-sortable columns
+			]
 		});
 
 		// Adding filters to specific columns
-		table.columns([2, 5]).every(function () {
+		table.columns([2, 3, 4]).every(function () {
 			var column = this;
 			var select = $('<select><option value=""></option></select>')
 				.appendTo($(column.header()))
@@ -288,7 +381,7 @@
 
 			column.data().unique().sort().each(function (d, j) {
 				// Only add the options "Assigned" and "Completed" for the "Status" column
-				if (column.index() === 5) {
+				if (column.index() === 4) {
 					// Set specific filter options only if they haven't been added
 					if (select.find("option[value='Assigned']").length == 0) {
 						select.append('<option value="Assigned">Assigned</option>');
