--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -305,7 +305,7 @@
 				{ "orderable": false, "targets": [0, 3, 4, 5] } // Non-sortable columns
 			],
 			// Set initial sorting by the Check-in Date
-			order: [[3, 'asc']]
+			//order: [[1, 'asc']]
 		});
 
 		// Adding filters to specific columns
