--- a/Pages/disaster/profile/entrylog/CheckIn.cshtml
+++ b/Pages/disaster/profile/entrylog/CheckIn.cshtml
@@ -246,7 +246,8 @@
             responsive: true,
             columnDefs: [
                 { "orderable": true, "targets": [1] }, // Sortable columns
-                { "orderable": false, "targets": [0, 2, 3, 4, 5, 6] } // Non-sortable columns
+                { "orderable": false, "targets": [0, 2, 3, 4, 5, 6] }, // Non-sortable columns
+                { "responsivePriority": -1, "targets": [0, 6] } // Disable responsive for checkbox and remarks select column
             ],
             // Set initial sorting
             order: [[1, 'asc']]
