Modified page title

--- a/Pages/EvacuationCenter/Add.cshtml
+++ b/Pages/EvacuationCenter/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model AgapayAidSystem.Pages.EvacuationCenter.AddEvacuationCenterModel
 @{
-	ViewData["Title"] = "New Evacuation Center";
+	ViewData["Title"] = "Add Evacuation Center";
 }
 
 @if (!string.IsNullOrEmpty(Model.errorMessage))
