--- a/Pages/disaster/profile/reliefgoodspack/Distribute.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Distribute.cshtml
@@ -47,7 +47,7 @@
 
             <div class="row pt-3">
                 <div class="col text-center">
-                    <h1>Distribute Relief Pack to Evacuee</h1>
+                    <h1>Distribute Relief Pack to Evacuees</h1>
                 </div>
             </div>
 
@@ -111,7 +111,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>Do you want to distribute this pack to the evacuee?</p>
+                <p>Are you sure you want to distribute this pack to the evacuee?</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
