--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -135,7 +135,7 @@
 											<label class="form-check-label"></label>
 										</div>
 									</th>
-									<th>Family Serial No.</th>
+									<th>Family Serial Number</th>
 									<th>Name</th>
 									<th style="text-align: center;">Remarks</th>
 									<th style="text-align: center;">Status</th>
@@ -153,8 +153,8 @@
 												<label class="form-check-label"></label>
 											</div>
 										</td>
-										<td width="20%" style="text-align: center;">@item.serialNum	</td>
-										<td width="40%">@item.fullName</td>
+										<td width="25%" style="text-align: center;">@item.serialNum	</td>
+										<td width="35%">@item.fullName</td>
 										<td width="20%">@item.remarks</td>
 										<td width="15%" style="text-align: center;">
 											@if (@item.entryStatus == "Check-in")
@@ -295,6 +295,9 @@
 	pageSelect.addEventListener('change', redirectToSelectedPage);
 </script>
 
+<!-- JS for Filter Button -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+
 <!-- Making the table responsive -->
 <script>
 	$(document).ready(function () {
@@ -311,33 +314,71 @@
 		// Adding filters to specific columns
 		table.columns([1, 3, 4]).every(function () {
 			var column = this;
-			var select = $('<select><option value=""></option></select>')
-				.appendTo($(column.header()))
-				.on('change', function () {
-					var val = $.fn.dataTable.util.escapeRegex(
-						$(this).val()
-					);
+			
+			// Create a container for the custom filter UI
+			var filterContainer = $('<div class="dropdown"></div>').appendTo($(column.header()));
 
-					column
-						.search(val ? '^' + val + '$' : '', true, false)
-						.draw();
-				});
+			// Create a button to toggle the dropdown
+			var btn = $('<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>')
+				.appendTo(filterContainer);
 
+			// Create a dropdown menu
+			var menu = $('<div class="dropdown-menu"></div>').appendTo(filterContainer);
+
+			// Populate the dropdown menu with checkboxes
 			column.data().unique().sort().each(function (d, j) {
 				// Only add the options "Check-in" and "Check-out" for the "Status" column
 				if (column.index() === 4) {
 					// Set specific filter options only if they haven't been added
-					if (select.find("option[value='Check-in']").length == 0) {
-						select.append('<option value="Check-in">Check-in</option>');
+					if (menu.find("input[value='Check-in']").length === 0) {
+						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Check-in">' +
+							'<label class="form-check-label">Check-in</label></div>');
 					}
-					if (select.find("option[value='Check-out']").length == 0) {
-						select.append('<option value="Check-out">Check-out</option>');
+					if (menu.find("input[value='Check-out']").length === 0) {
+						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Check-out">' +
+							'<label class="form-check-label">Check-out</label></div>');
 					}
 				}
 				// For other columns, show all unique values as filter options
 				else {
-					select.append('<option value="' + d + '">' + d + '</option>');
+					menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="' + d + '">' +
+						'<label class="form-check-label">' + d + '</label></div>');
 				}
+			});
+
+			// Add "Select All" option
+			menu.prepend('<div class="form-check"><input class="form-check-input select-all" type="checkbox" value="select-all">' +
+				'<label class="form-check-label">Select All</label></div>');
+
+			// Add "Clear Filter" button with icon
+			menu.append('<button type="button" class="btn clear-filter"><i class="bi bi-eraser"></i> Clear Filter</button>');
+			
+			// Handle click events on the checkboxes and "Clear Filter" button
+			menu.find('.form-check-input, .clear-filter').on('click', function () {
+				if ($(this).hasClass('form-check-input')) {
+					// Handle checkboxes
+					var checked = $(this).prop('checked');
+
+					if ($(this).val() === 'select-all') {
+						menu.find('.form-check-input').prop('checked', checked);
+					} else {
+						if (!checked) {
+							menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+						}
+					}
+				} else {
+					// Handle "Clear Filter" button
+					menu.find('.form-check-input').prop('checked', false);
+					menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+				}
+
+				var selectedValues = menu.find('.form-check-input:checked').map(function () {
+					return $(this).val();
+				}).get();
+
+				column
+					.search(selectedValues.length > 0 ? '^(' + selectedValues.join('|') + ')$' : '', true, false)
+					.draw();
 			});
 		});
 	});
